--- a/project_styles.css
+++ b/project_styles.css
@@ -6,7 +6,14 @@
 }
 
 .left_li {
-    float: left;   
+    float: left;  
+}
+
+.left_li a {
+  display: block;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
 }
 .center {
   margin: auto;
