--- a/project_styles.css
+++ b/project_styles.css
@@ -1,8 +1,9 @@
 .horizontal_ul {
     list-style: none;
-    margin: 0px;
     width: 400px;
     height: 140px;
+    display: table;   /* Allow the centering to work */
+	margin: 0 auto;
 }
 
 .left_li {
