--- a/project_styles.css
+++ b/project_styles.css
@@ -1,6 +1,6 @@
 .horizontal_ul {
     list-style: none;
-    width: 400px;
+    width: 75%;
     height: 140px;
     display: table;   /* Allow the centering to work */
     margin: 0 auto;
@@ -18,6 +18,7 @@
 }
 .center {
   margin: auto;
-  width: 70%;
+  width: 75%;
   border: 3px solid #73AD21;
+  padding: 10px;
 }
